@@ -1,5 +1,10 @@
 2011-10-27  Ramon Novoa  <rnovoa@artica.es>
 
+	* pandora_update_version.sh: Include build number in the
+	  Windows agent installer for nightly builds.
+
+2011-10-27  Ramon Novoa  <rnovoa@artica.es>
+
 	* build_src.sh: Create symlinks needed to build RPM packages.
 
 2011-10-27  Ramon Novoa  <rnovoa@artica.es>
